<resources>
    <string name="app_name">BINL</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="boma_investment_ltd">BOMA INVESTMENT</string>
    <string name="change_price">Change Price</string>
    <string name="sales_records">Sales Records</string>
    <string name="products">Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grand_total">Grand Total:</string>
    <string name="zero_naira">₦0.00</string>
    <string name="default_total">₦0.00</string>
    <string name="default_grand_total">Grand Total: ₦0.00</string>
    <string name="company_spinner_label">Company:</string>
    <string name="restart_warning">Please note, an app restart is required after adding new products.</string>
    <string name="add_product_page_price_entry_hint">Enter Price</string>
    <string name="add_product_page_product_price_label">Product Price (₦)</string>
    <string name="naira_sign">₦</string>
</resources>