<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/products"
            android:title="@string/products"
            android:icon="@drawable/shopping_cart"/>
        <item
            android:id="@+id/change_price"
            android:title="@string/change_price"
            android:icon="@drawable/price_change_svg"/>
        <item
            android:id="@+id/records"
            android:title="@string/sales_records"
            android:icon="@drawable/records_svg"/>
    </group>
    <group>
        <item
            android:id="@+id/addProduct"
            android:title="Add Product"
            android:icon="@drawable/add_product"/>
    </group>
</menu>